--- a/UseAbilities/UseAbilities.Visual/UseAbilities.Visual.csproj
+++ b/UseAbilities/UseAbilities.Visual/UseAbilities.Visual.csproj
@@ -50,6 +50,12 @@
     <Compile Include="Styles\BaseAnimationBehaviorDic.xaml.cs">
       <DependentUpon>BaseAnimationBehaviorDic.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Styles\Controls\BaseFrameworkElementStylesDic.xaml.cs">
+      <DependentUpon>BaseFrameworkElementStylesDic.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Styles\Controls\Buttons\ImageSquareButtonStyle.xaml.cs">
+      <DependentUpon>ImageSquareButtonStyle.xaml</DependentUpon>
+    </Compile>
     <Page Include="Colors\ColorsDic.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -72,6 +78,14 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Styles\BaseAnimationBehaviorDic.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Styles\Controls\BaseFrameworkElementStylesDic.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Styles\Controls\Buttons\ImageSquareButtonStyle.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
